--- a/apps/wallet/instance/src/main/res/layout/fragment_swap_search.xml
+++ b/apps/wallet/instance/src/main/res/layout/fragment_swap_search.xml
@@ -11,7 +11,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:action="@drawable/ic_close_16"
-        android:title="@string/select_token"
+        android:title="@string/choose_token"
         app:ignoreSystemOffset="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
