--- a/ui/uikit/core/src/main/res/values/dimens.xml
+++ b/ui/uikit/core/src/main/res/values/dimens.xml
@@ -20,4 +20,7 @@
     <dimen name="offsetSmall">8dp</dimen>
     <dimen name="offsetMedium">16dp</dimen>
     <dimen name="offsetLarge">32dp</dimen>
+
+    <dimen name="lineInfoHeight">48dp</dimen>
+    <dimen name="lineInfoCompactHeight">36dp</dimen>
 </resources>
