--- a/apps/wallet/instance/src/main/res/layout/fragment_swap_amount.xml
+++ b/apps/wallet/instance/src/main/res/layout/fragment_swap_amount.xml
@@ -198,7 +198,7 @@
                 android:hint="0"
                 android:inputType="numberDecimal"
                 android:singleLine="true"
-                android:textColor="@color/edit_text_selector"
+                android:textColor="?attr/textPrimaryColor"
                 android:textCursorDrawable="@drawable/cursor"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -307,18 +307,48 @@
 
     </uikit.widget.ColumnLayout>
 
-    <Button
-        android:id="@+id/action"
-        style="@style/Widget.App.Button.Secondary"
-        android:layout_width="match_parent"
+    <FrameLayout
+        android:id="@+id/actionContainer"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/offsetMedium"
         android:layout_marginTop="@dimen/offsetLarge"
         android:layout_marginBottom="@dimen/offsetMedium"
-        android:text="@string/enter_amount"
-        android:textAppearance="@style/TextAppearance.Label1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/dstInput" />
+        app:layout_constraintTop_toBottomOf="@+id/dstInput">
+
+        <Button
+            android:id="@+id/action"
+            style="@style/Widget.App.Button.Secondary"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:enabled="false"
+            android:text="@string/enter_amount"
+            android:textAppearance="@style/TextAppearance.Label1" />
+
+        <FrameLayout
+            android:id="@+id/actionLoader"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/itemHeight"
+            android:background="@drawable/bg_button_secondary"
+            android:visibility="gone">
+
+            <uikit.widget.LoaderView
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:layout_gravity="center"
+                android:color="?attr/buttonPrimaryForegroundColor" />
+        </FrameLayout>
+
+        <Button
+            android:id="@+id/continueAction"
+            style="@style/Widget.App.Button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/continue_action"
+            android:textAppearance="@style/TextAppearance.Label1"
+            android:visibility="gone" />
+    </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
