--- a/apps/wallet/instance/src/main/res/layout/fragment_swap_amount.xml
+++ b/apps/wallet/instance/src/main/res/layout/fragment_swap_amount.xml
@@ -138,7 +138,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="@dimen/offsetMedium"
-        android:layout_marginTop="@dimen/offsetMedium"
+        android:layout_marginTop="@dimen/offsetSmall"
+        android:paddingTop="12dp"
         android:background="@drawable/bg_content"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -306,6 +307,17 @@
         </uikit.widget.ColumnLayout>
 
     </uikit.widget.ColumnLayout>
+
+    <androidx.appcompat.widget.AppCompatImageButton
+        android:id="@+id/swapTokens"
+        style="@style/Widget.App.Button.Circle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="@dimen/offsetLarge"
+        android:src="@drawable/ic_swap_vertical_16"
+        app:layout_constraintBottom_toTopOf="@id/dstInput"
+        app:layout_constraintEnd_toEndOf="@id/srcInput"
+        app:layout_constraintTop_toBottomOf="@id/srcInput" />
 
     <FrameLayout
         android:id="@+id/actionContainer"
