--- a/ui/uikit/core/src/main/res/values/dimens.xml
+++ b/ui/uikit/core/src/main/res/values/dimens.xml
@@ -23,4 +23,5 @@
 
     <dimen name="lineInfoHeight">48dp</dimen>
     <dimen name="lineInfoCompactHeight">36dp</dimen>
+    <dimen name="circleButtonSize">40dp</dimen>
 </resources>
